---
source: tui/src/diff_render.rs
expression: terminal.backend()
---
"• 已编辑 2 个文件 (+2 -1)                                                       " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (12, " "), (14, " "), (16, " ")]
"  └ a.txt (+1 -1)                                                               "
"    1     -one                                                                  "
"    1     +one changed                                                          "
"                                                                                "
"  └ b.txt (+1 -0)                                                               "
"    1     +new                                                                  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
